modified:   messages/install.txt

--- a/messages/install.txt
+++ b/messages/install.txt
@@ -2,8 +2,10 @@ Usage instructions:
 
 PHP cli is required, obviously (php executable must be in your $PATH environment variable)
 
-You must have a Sublime Text project file saved in the root of the project.
+If you are on ST2 You **must** have a Sublime Text project file saved in the root of the project.
 To do this open your Project files (drag and drop the whole directory onto Sublime Text) and then save a new project by using the Project menu item.
+This because the ST2 api does not let fetching data from project as ST3 api does.
+For ST3 users, project_data() is used, and the file will be saved in the first folder of your project
 
 Then enable the classes scan by adding a setting
 
